# release-signing-tester

./: CMakeLists.txt  README.md
.github/workflows/: Build.yml  CreateRelease.yml
resources/: readme.txt
resources/linux/: rst.desktop
resources/macos/: rst_dmg_latest.json
resources/windows/: rst.nsi
scripts/Linux/: 1_build.sh  2_deploy.sh  make_it.sh
scripts/Linux/internal/: 2a_make_bundle.sh  2c_portable.sh  2d_appimage.sh
scripts/Windows/: 1_build.sh  2_deploy.sh  make_it.sh
scripts/Windows/internal/: 2a_portable.sh  2b_sign_dlls.sh  2c_installer.sh
scripts/macOS/: 1_build.sh  2_deploy.sh  make_it.sh
scripts/macOS/internal/: 2a_appbundle.sh  2b_sign_appbundle.sh  2c_notarize_appbundle.sh  2d_dmg.sh
